src/test/deca/context/invalid/provided/ContextSansObjet/OperationsArithmetiques/ModuloStringInt.deca
//Description :
//	Vérification contextuelle de l'opérateur % avec pour entrée <string, int>
//
//Résultats :
//  Erreur contextuelle
//	ligne 9 : type incompatible

{
    int x = "Hello""%3;
}